--- a/header.html
+++ b/header.html
@@ -34,10 +34,9 @@
         .head_cont{
             background: white;
             color: green;
-            height: 100%;
             text-align: center;
             vertical-align: middle;
-            display: inline;
+            display: flex;
             
         }
             
