--- a/header.html
+++ b/header.html
@@ -36,8 +36,8 @@
             color: green;
             text-align: center;
             vertical-align: middle;
-            display: flex;
-            
+            display: inline;
+            height: 100%;
         }
             
         </style>
