--- a/header.html
+++ b/header.html
@@ -26,7 +26,7 @@
             margin: auto;
             float: right;
             display: inline-block;
-            height: 100%;
+            padding: 15px;
         }
         .logga{
             display:inline-block;
