--- a/header.html
+++ b/header.html
@@ -20,6 +20,7 @@
             float: left;
             display: inline-block;
             height: 100%;
+ 
         }
         .right_div{
             background: red;
@@ -27,17 +28,20 @@
             float: right;
             display: inline-block;
             height:100%;
+
         }
         .logga{
             display:inline-block;
         }
         .head_cont{
+            font-family: arial;
+            font-weight: bold;
             background: white;
             color: green;
             text-align: center;
             vertical-align: middle;
             display: inline;
-            padding: 15px;
+            margin: auto;
         }
             
         </style>
