--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
             float: left;
             display: inline-block;
             height: 100%;
- 
+            padding: 15px;
         }
         .right_div{
             background: red;
@@ -28,7 +28,7 @@
             float: right;
             display: inline-block;
             height:100%;
-
+            padding: 15px;
         }
         .logga{
             display:inline-block;
@@ -38,10 +38,7 @@
             font-weight: bold;
             background: white;
             color: green;
-            text-align: center;
-            vertical-align: middle;
             display: inline;
-            margin: auto;
         }
             
         </style>
@@ -53,19 +50,15 @@
               <img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             </div> 
+
             <div class = left_div>
-            <p class = head_cont>Gaffel1</p>
-            <p class = head_cont>Gaffel2</p>
-            </div> 
-            <div class = left_div>
-            <p class = head_cont>Gaffel</p>
-            <p class = head_cont>Gaffel1</p>
-            <p class = head_cont>Gaffel2</p>
+            <p class = head_cont>Artiklar</p>
+            <p class = head_cont>Recensioner</p>
+            <p class = head_cont>Krönikor</p>
             </div> 
             <div class = right_div>
-            <p class = head_cont>Gaffel</p>
-            <p class = head_cont>Gaffel1</p>
-            <p class = head_cont>Gaffel2</p>
+            <p class = head_cont>STUDIO G</p>
+            <p class = head_cont>DRAKENS VÄRLD</p>
             </div> 
         </div>
     </body>
