--- a/header.html
+++ b/header.html
@@ -25,6 +25,7 @@
         .right_div{
             background: red;
             margin: auto;
+            margin-right: 6vw;
             float: right;
             display: inline-block;
             height:100%;
