--- a/header.html
+++ b/header.html
@@ -35,6 +35,8 @@
             background: white;
             color: green;
             display: inline;
+
+            margin: auto;
         }
             
         </style>
