--- a/header.html
+++ b/header.html
@@ -32,11 +32,13 @@
         .head_cont{
             font-family: arial;
             font-weight: bold;
-            background: white;
-            color: green;
-            display: inline;
+            float: left;
+          color: #f2f2f2;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
 
-            margin: auto;
         }
             
         </style>
