--- a/header.html
+++ b/header.html
@@ -27,6 +27,7 @@
             display: inline-block;
         }
         .logga{
+            background: #00000000;
             display:inline-block;
         }
         .head_cont{
