--- a/header.html
+++ b/header.html
@@ -34,12 +34,17 @@
             font-family: arial;
             font-weight: bold;
             float: left;
-          color: #f2f2f2;
+          color: white;
           text-align: center;
           padding: 0px 5px;
           text-decoration: none;
           font-size: 17px;
 
+        }
+
+        .head_cont:hover {
+          background-color: white;
+          color: black;
         }
             
         </style>
@@ -58,8 +63,8 @@
             <p class = head_cont>Krönikor</p>
             </div> 
             <div class = right_div>
-            <p class = head_cont>STUDIO G</p>
-            <p class = head_cont>DRAKENS VÄRLD</p>
+            <a href = "studio-g." class = head_cont>STUDIO G</a>
+            <a href = "studio-g." class = head_cont>DRAKENS VÄRLD</a>
             </div> 
         </div>
     </body>
