--- a/header.html
+++ b/header.html
@@ -39,6 +39,8 @@
           text-decoration: none;
           font-size: 17px;
 
+            height: 100%;
+
         }
 
         .head_cont:hover {
