--- a/header.html
+++ b/header.html
@@ -24,6 +24,7 @@
             margin: auto;
             margin-right: 6vw;
             float: right;
+            height: 100%;
         }
         .logga{
             background: #00000000;
