--- a/header.html
+++ b/header.html
@@ -39,7 +39,7 @@
           padding: 0px 5px;
           text-decoration: none;
           font-size: 17px;
-
+            padding: 5px;
             height: 100%;
 
         }
