--- a/header.html
+++ b/header.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <style>
+
+        @font-face {
+		  font-family: garamond;
+		  src: url(font/garamond.ttf) format("truetype");
+		}
+            
         body{
             margin: 0px;
             padding: 0px;
@@ -31,12 +37,12 @@
             display:inline-block;
         }
         .head_cont{
-            font-family: arial;
+            font-family: garamond;
             font-weight: bold;
             float: left;
           color: white;
           text-align: center;
-          padding: 5px 10px;
+          padding: 25px 10px;
           text-decoration: none;
           font-size: 17px;
             height: 100%;
