--- a/header.html
+++ b/header.html
@@ -65,9 +65,10 @@
             </div> 
 
             <div class = left_div>
-            <p class = head_cont>Artiklar</p>
-            <p class = head_cont>Recensioner</p>
-            <p class = head_cont>Krönikor</p>
+            <a href = "studio-g." class = head_cont>Artiklar</a>
+            <a href = "studio-g." class = head_cont>Kultur</a>
+	    <a href = "studio-g." class = head_cont>Mode</a>
+            <a href = "studio-g." class = head_cont>Recensioner</a>
             </div> 
             <div class = right_div>
             <a href = "studio-g." class = head_cont>STUDIO G</a>
