--- a/header.html
+++ b/header.html
@@ -18,6 +18,7 @@
             height: 55px;
             background: black;
             display: inline-block;
+		  overflow: hidden;
         }
         .left_div{
             background: red;
