--- a/header.html
+++ b/header.html
@@ -25,6 +25,7 @@
             margin: auto;
             margin-left: 5vw;
             float: left;
+	    height: 100%;
         }
         .right_div{
             background: red;
