--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@
         <style>
 
         @font-face {
-		  font-family: garamond;
-		  src: url(font/garamond.ttf) format("truetype");
+		  font-family: Helvetica;
+		  src: url(font/Helvetica.ttf) format("truetype");
 		}
             
         body{
@@ -28,7 +28,7 @@
 	    height: 100%;
         }
         .right_div{
-            background: red;
+            background: black;
             margin: auto;
             margin-right: 6vw;
             float: right;
@@ -39,11 +39,11 @@
             display:inline-block;
         }
         .head_cont{
-            font-family: garamond;
+            font-family: Helvetica;
             float: left;
           color: white;
           text-align: center;
-          padding: 10px 10px;
+          padding: 12px 10px;
           text-decoration: none;
           font-size: 17px;
             height: 100%;
