--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@
 		  overflow: hidden;
         }
         .left_div{
-            background: red;
+            background: black;
             margin: auto;
             margin-left: 5vw;
             float: left;
@@ -39,11 +39,12 @@
             display:inline-block;
         }
         .head_cont{
-            font-family: Helvetica;
-            float: left;
+          font-family: Helvetica;
+	  font-weight: bold;
+	  float: left;
           color: white;
           text-align: center;
-          padding: 12px 10px;
+          padding: 12px 15px;
           text-decoration: none;
           font-size: 17px;
             height: 100%;
