--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@
         <style>
 
         @font-face {
-		  font-family: Helvetica;
-		  src: url(font/Helvetica.ttf) format("truetype");
+		  font-family: Helvetica-Bold;
+		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 		}
             
         body{
@@ -39,16 +39,14 @@
             display:inline-block;
         }
         .head_cont{
-          font-family: Helvetica;
-	  font-weight: bold;
+          font-family: Helvetica-Bold;
 	  float: left;
           color: white;
           text-align: center;
           padding: 12px 15px;
           text-decoration: none;
           font-size: 17px;
-            height: 100%;
-
+	  height: 100%;
         }
 
         .head_cont:hover {
