--- a/header.html
+++ b/header.html
@@ -43,7 +43,7 @@
 	  float: left;
           color: white;
           text-align: center;
-          padding: 18px 15px;
+          padding: 18px 1vw;
           text-decoration: none;
           font-size: 17px;
 	  height: 100%;
