--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		.blog_area{
 			background: #01010100;
 			width: clamp(50px,90vw,1000px);
+			margin: auto;
 		}
 		.blog_cont{
 			margin-bottom: 10px;
@@ -52,7 +53,7 @@
 		.blog_title {
 		  padding-top: 1%;
 		  font-family: morfeta;
-		  font-size: clamp(10px,3vw,40px);
+		  font-size: clamp(10px,4%,40px);
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
