--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		.blog_title {
 		  padding-top: 1%;
 		  font-family: morfeta;
-		  font-size: clamp(10px,4%,40px);
+		  font-size: clamp(10px,3vw,40px);
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
