--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
 			font-size: clamp(5px,2vw,20px);
 			color: #FFFFFFFF;
 		}
+
+
+
+		.fixed{
+		 position:fixed;
+		 top:0;
+		 z-index: 1;
+		 width:100%;
+		 height:100%;
+		 background-image:url(http://i111.photobucket.com/albums/n144/baby_painting/bowlace2.gif);background-     
+		 repeat: repeat-x; 
+		}
+		.content{margin-top:57px;}
 	</style>
 </head>
  
@@ -74,6 +87,9 @@
 			});
 		
 	</script></div>
+
+	<div  class='fixed' ></div>
+   	<div class='content'>Your content here </div>
 	
 	<script>
 		function open_article(str){
