--- a/index.html
+++ b/index.html
@@ -63,17 +63,13 @@
 		}
 
 
-
-		.fixed{
-		 position:fixed;
-		 top:0;
-		 z-index: 1;
-		 width:100%;
-		 height:100%;
-		 background-image:url(http://i111.photobucket.com/albums/n144/baby_painting/bowlace2.gif);background-     
-		 repeat: repeat-x; 
+		.banner{
+			  background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/dirty-habit-fox-photos.jpg");
+			  background-repeat: no-repeat;
+			  background-attachment: fixed;
+					
 		}
-		.content{margin-top:57px;}
+		
 	</style>
 </head>
  
@@ -88,8 +84,7 @@
 		
 	</script></div>
 
-	<div  class='fixed' ></div>
-   	<div class='content'>Your content here </div>
+	<div class = banner><p>Hej</p></div>
 	
 	<script>
 		function open_article(str){
