--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			  background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/dirty-habit-fox-photos.jpg");
 			  background-repeat: no-repeat;
 			  background-attachment: fixed;
-					
+			  background-position-x: center;
 		}
 		
 	</style>
@@ -84,7 +84,7 @@
 		
 	</script></div>
 
-	<div class = banner><p>Hej</p></div>
+	<div class = banner><p style = "text-align: center;">Hej</p></div>
 	
 	<script>
 		function open_article(str){
