--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 			  background-attachment: fixed;
 			  background-position-x: center;
 		}
+
+		.gaffel_logga{
+			margin: auto;
+			background: black;
+		}
 		
 	</style>
 </head>
