--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
 		.banner{
-			  background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/dirty-habit-fox-photos.jpg");
+			  background-image: url("bilder/gaffel_bakgrund_tavlor.png");
 			  background-repeat: no-repeat;
 			  background-attachment: fixed;
 			  background-position-x: center;
@@ -89,7 +89,9 @@
 		
 	</script></div>
 
-	<div class = banner><p style = "text-align: center;">Hej</p></div>
+	<div class = banner>
+		<img src = "bilder/logga_hel_ny.png"></img>
+	</div>
 	
 	<script>
 		function open_article(str){
