--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
 			  background-repeat: no-repeat;
 			  background-attachment: fixed;
 			  background-position-x: center;
+			  background-size: contain;
 		}
 
 		.gaffel_logga{
 			margin: auto;
+			display: block;
 			background: black;
 		}
 		
