--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
 		.banner{
 			  background-image: url("bilder/gaffel_bakgrund_tavlor.png");
 			  background-repeat: no-repeat;
-			  background-attachment: fixed;
 			  background-position-x: center;
-			  background-size: contain;
+			  background-size: cover;
 		}
 
 		.gaffel_logga{
@@ -92,7 +91,7 @@
 	</script></div>
 
 	<div class = banner>
-		<img src = "bilder/logga_hel_ny.png"></img>
+		<img src = "bilder/logga_hel_ny.png" class = gaffel_logga></img>
 	</div>
 	
 	<script>
