--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 			  background-image: url("bilder/gaffel_bakgrund_tavlor.png");
 			  background-repeat: no-repeat;
 			  background-position-x: center;
+			  background-attachment: fixed;
 			  background-size: cover;
+			  background-height: 500px;
 		}
 
 		.gaffel_logga{
