--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			background: #01010100;
 			width: clamp(50px,90vw,1000px);
 			margin: auto;
+			margin-top: 5vw;
 		}
 		.blog_cont{
 			margin-bottom: 10px;
@@ -69,7 +70,8 @@
 			  background-position-x: center;
 			  background-attachment: fixed;
 			  background-size: cover;
-			  background-height: 500px;
+			  height: 500px;
+			  display: inline-block;
 		}
 
 		.gaffel_logga{
