--- a/index.html
+++ b/index.html
@@ -70,13 +70,16 @@
 			  background-position-x: center;
 			  background-attachment: fixed;
 			  background-size: cover;
-			  height: 500px;
+			  height: 700px;
+			  margin: 0px;
+			  padding: 0px;
 		}
 
 		.gaffel_logga{
 			margin: auto;
 			display: block;
 			background: black;
+			float: bottom;
 		}
 		
 	</style>
