--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 			margin: auto;
 			display: block;
 			background: black;
-			float: bottom;
+			position: absolute;
+    			bottom: 0;
 		}
 		
 	</style>
