--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
 			  height: 700px;
 			  margin: 0px;
 			  padding: 0px;
+
+			  display: flex;
 		}
 
 		.gaffel_logga{
 			margin: auto;
 			display: block;
-			background: black;
-			position: absolute;
-    			bottom: 0;
+			background: #044827FF;
+			align-self: flex-end;
 		}
 		
 	</style>
