--- a/index.html
+++ b/index.html
@@ -74,14 +74,13 @@
 			  margin: 0px;
 			  padding: 0px;
 
-			  display: flex;
 		}
 
 		.gaffel_logga{
 			margin: auto;
 			display: block;
 			background: #044827FF;
-			align-self: flex-end;
+			margin-top: auto;
 		}
 		
 	</style>
