--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 			  height: 700px;
 			  margin: 0px;
 			  padding: 0px;
+			display: flex;
 
 		}
 
@@ -80,7 +81,8 @@
 			margin: auto;
 			display: block;
 			background: #044827FF;
-			margin-bottom: 0px;
+			align-items: flex-end;
+   			 display: flex;
 		}
 		
 	</style>
