--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		  font-family: morfeta;
 		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
 		}
+		@font-face {
+		  font-family: helvetica_bold;
+		  src: url(font/Helvetica-Bold) format("truetype");
+		}
 		
 		body{
 			background-color: #044827FF;
@@ -81,8 +85,12 @@
 			margin: auto;
 			display: block;
 			background: #044827FF;
-			align-items: flex-end;
+			padding: 20px, 10px;
+			
    			 display: flex;
+		}
+		.gaffel_slogan{
+			font-family: helvetica_bold;
 		}
 		
 	</style>
@@ -101,6 +109,7 @@
 
 	<div class = banner>
 		<img src = "bilder/logga_hel_ny.png" class = gaffel_logga></img>
+		<p class = gaffel_slogan>sveriges farligaste popkulturmagasin</p>
 	</div>
 	
 	<script>
