--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 			  height: 700px;
 			  margin: 0px;
 			  padding: 0px;
-			display: flex;
 
 		}
 
@@ -86,11 +85,12 @@
 			display: block;
 			background: #044827FF;
 			padding: 20px, 10px;
-			
-   			 display: flex;
+
 		}
 		.gaffel_slogan{
 			font-family: helvetica_bold;
+			color: white;
+			font-size: 25px;
 		}
 		
 	</style>
@@ -109,7 +109,7 @@
 
 	<div class = banner>
 		<img src = "bilder/logga_hel_ny.png" class = gaffel_logga></img>
-		<p class = gaffel_slogan>sveriges farligaste popkulturmagasin</p>
+		<div class = gaffel_slogan>sveriges farligaste popkulturmagasin</div>
 	</div>
 	
 	<script>
