--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		}
 		@font-face {
 		  font-family: helvetica_bold;
-		  src: url(font/Helvetica-Bold) format("truetype");
+		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 		}
 		
 		body{
@@ -77,7 +77,7 @@
 			  height: 700px;
 			  margin: 0px;
 			  padding: 0px;
-
+			  display: flex;
 		}
 
 		.gaffel_logga{
@@ -91,6 +91,10 @@
 			font-family: helvetica_bold;
 			color: white;
 			font-size: 25px;
+			margin: auto;
+			display: block;
+			background: #044827FF;
+			padding: 20px, 10px;
 		}
 		
 	</style>
