--- a/index.html
+++ b/index.html
@@ -85,16 +85,9 @@
 			display: block;
 			background: #044827FF;
 			padding: 20px, 10px;
-
-		}
-		.gaffel_slogan{
 			font-family: helvetica_bold;
 			color: white;
 			font-size: 25px;
-			margin: auto;
-			display: block;
-			background: #044827FF;
-			padding: 20px, 10px;
 		}
 		
 	</style>
@@ -112,8 +105,10 @@
 	</script></div>
 
 	<div class = banner>
-		<img src = "bilder/logga_hel_ny.png" class = gaffel_logga></img>
-		<div class = gaffel_slogan>sveriges farligaste popkulturmagasin</div>
+		<div class = gaffel_logga>
+			<img src = "bilder/logga_hel_ny.png"></img>
+			<p>sveriges farligaste popkulturmagasin</p>
+		</div>
 	</div>
 	
 	<script>
