--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<div class = banner>
 		<div class = gaffel_logga>
 			<img src = "bilder/logga_hel_ny.png"></img>
-			<p>sveriges farligaste popkulturmagasin</p>
+			<p style="margin: 0px; id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 		</div>
 	</div>
 	
