--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 			color: white;
 			font-size: 25px;
 			text-align: center;
+
+			width: 50px;
 		}
 		
 	</style>
@@ -108,7 +110,7 @@
 	<div class = banner>
 		<div class = gaffel_logga>
 			<img src = "bilder/logga_hel_ny.png"></img>
-			<p style="margin: 0px; id = 'slogan'">sveriges farligaste popkulturmagasin</p>
+			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 		</div>
 	</div>
 	
