--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 
 			width: 50px;
 		}
+		gaffel_logga_bild{
+			width: inherit;
+		}
 		
 	</style>
 </head>
@@ -109,7 +112,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<img src = "bilder/logga_hel_ny.png"></img>
+			<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 		</div>
 	</div>
