--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 			padding: 20px, 10px;
 			font-family: helvetica_bold;
 			color: white;
-			font-size: 25px;
+			font-size: clamp(5px,5vw,25px);
 			text-align: center;
 
-			width: 50px;
+			width: clamp(100px,10vw,300px);
 		}
 		.gaffel_logga_bild{
 			width: inherit;
