--- a/header.html
+++ b/header.html
@@ -64,14 +64,13 @@
             </a>
             </div> 
 
-            <div class = left_div>
+           <!-- <div class = left_div>
             <a href = "studio-g." class = head_cont>Artiklar</a>
             <a href = "studio-g." class = head_cont>Kultur</a>
 	    <a href = "studio-g." class = head_cont>Mode</a>
             <a href = "studio-g." class = head_cont>Recensioner</a>
-            </div> 
+            </div> -->
             <div class = right_div>
-            <a href = "studio-g." class = head_cont>STUDIO G</a>
             <a href = "studio-g." class = head_cont>DRAKENS VÄRLD</a>
             </div> 
         </div>
