--- a/header.html
+++ b/header.html
@@ -71,7 +71,7 @@
             <a href = "studio-g." class = head_cont>Recensioner</a>
             </div> -->
             <div class = right_div>
-            <a href = "studio-g." class = head_cont>DRAKENS VÄRLD</a>
+            <a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
             </div> 
         </div>
     </body>
