--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -24,7 +24,7 @@
   		
   	</script></div>
         <div class = game>
-          <iframe id="game-iframe" src="https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld">
+          <iframe id="game-iframe" class = game src="https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld">
 
         </div>
     </body>
