--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -8,8 +8,8 @@
             padding: 0px;
           }
           .game{
-            width :1200px;
-            height= 1000px;
+            width: clamp(120px,96vw,1200px);
+            height: clamp(100px,80vw,1000px);
             margin: auto;
           }
         </style>
