--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		<div class = gaffel_logga>
 			<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
-			<script>document.getElementById('slogan').innerHTML = någonting annat</script>
+			<script>document.getElementById('slogan').innerHTML = `någonting annat`</script>
 		</div>
 	</div>
 	
