--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogiska underhållning i en trivsam miljö'];
 				var ny_slogan = slogan_array[Math.floor(Math.random(slogan_array.length))];
+				console.log(ny_slogan);
 				document.getElementById('slogan').innerHTML = ny_slogan;
 			</script>
 		</div>
