--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogiska underhållning i en trivsam miljö'];
-				var ny_slogan = slogan_array[Math.floor(Math.random(slogan_array.length))];
+				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
 				console.log(ny_slogan);
 				document.getElementById('slogan').innerHTML = ny_slogan;
 			</script>
