--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
 
 		.banner{
+			  background: black;
 			  background-image: url("bilder/gaffel_bakgrund_tavlor.png");
 			  background-repeat: no-repeat;
 			  background-position-x: center;
@@ -152,7 +153,8 @@
 				
 				var new_html = `<div>
 					<img src = ${bild} class = blog_img id = ${'bild' + div_id}></img>
-     					<div class = blog_row>
+     					<br>
+	  				<div class = blog_row>
      						<div class = blog_title id = ${'titel' + div_id}>${titel}</div>
 			        		<div class = blog_preamble id = ${'ingress' + div_id}>${ingress}</div>
       					</div>
