--- a/index.html
+++ b/index.html
@@ -126,6 +126,23 @@
 	</div>
 	
 	<script>
+		  function detectMob() {
+		    const toMatch = [
+		        /Android/i,
+		        /webOS/i,
+		        /iPhone/i,
+		        /iPod/i,
+		        /BlackBerry/i,
+		        /Windows Phone/i
+		    ];
+    
+		    return toMatch.some((toMatchItem) => {
+			return navigator.userAgent.match(toMatchItem);
+		    });
+		}
+
+		console.log(detectMob())
+		
 		function open_article(str){
 			window.location.href = 'https://gaffelmagasin.github.io/artikel' + '?=' + str;
 		}
@@ -152,11 +169,12 @@
 				var bild = content_of_tag(a_str,"bild",0);
 
 				var imgw = 55;
-				if(small == true){imgw = 100}
+				var roww = 40;
+				if(small == true){imgw = 100 roww = 100}
 				
 				var new_html = `<div>
 					<img src = ${bild} class = blog_img id = ${'bild' + div_id} style = "width: ${imgw}%;"></img>
-	  				<div class = blog_row>
+	  				<div class = blog_row style = "width: ${roww}%;">
      						<div class = blog_title id = ${'titel' + div_id}>${titel}</div>
 			        		<div class = blog_preamble id = ${'ingress' + div_id}>${ingress}</div>
       					</div>
