--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 		.blog_title {
 		  padding-top: 1%;
 		  font-family: morfeta;
-		  font-size: clamp(10px,40%,40px);
+		  font-size: 10%;
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
 		.blog_preamble{
-			font-size: clamp(5px,20%,20px);
+			font-size: 5%;
 			color: #FFFFFFFF;
 		}
 
