--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 		.blog_title {
 		  padding-top: 1%;
 		  font-family: morfeta;
-		  font-size: 10%;
+		  font-size: 4vw;
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
 		.blog_preamble{
-			font-size: 5%;
+			font-size: 5vi;
 			color: #FFFFFFFF;
 		}
 
