--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 		.blog_title {
 		  padding-top: 1%;
 		  font-family: morfeta;
-		  font-size: 4vw;
+		  font-size: clamp(10px,4vw,40px);
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
 		.blog_preamble{
-			font-size: 5vi;
+			font-size: clamp(5px,3vw,20px);
 			color: #FFFFFFFF;
 		}
 
