--- a/index.html
+++ b/index.html
@@ -168,18 +168,22 @@
 				var skribent = content_of_tag(a_str,"skribent",0);
 				var bild = content_of_tag(a_str,"bild",0);
 
+				var text_style_title = `font-size: clamp(10px,4vw,40px)`
+				var text_style_preamble = `font-size: clamp(5px,3vw,20px);`
 				var imgw = 55;
 				var roww = 40;
 				if(small == true){
 					imgw = 100;
 					roww = 100;
+					text_style_title = `font-size: clamp(20px,8vw,80px)`
+					text_style_preamble = `font-size: clamp(10px,6vw,40px);`
 				}
 				
 				var new_html = `<div>
 					<img src = ${bild} class = blog_img id = ${'bild' + div_id} style = "width: ${imgw}%;"></img>
 	  				<div class = blog_row style = "width: ${roww}%;">
-     						<div class = blog_title id = ${'titel' + div_id}>${titel}</div>
-			        		<div class = blog_preamble id = ${'ingress' + div_id}>${ingress}</div>
+     						<div class = blog_title id = ${'titel' + div_id} style = ${text_style_title}>${titel}</div>
+			        		<div class = blog_preamble id = ${'ingress' + div_id} style = ${text_style_preamble}>${ingress}</div>
       					</div>
 			        </div>`
 
