--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 				var new_html = `<div>
 					<img src = ${bild} class = blog_img id = ${'bild' + div_id} style = "width: ${imgw}%;"></img>
 	  				<div class = blog_row style = "width: ${roww}%;">
-     						<div class = blog_title id = ${'titel' + div_id} style = ${text_style_title}>${titel}</div>
-			        		<div class = blog_preamble id = ${'ingress' + div_id} style = ${text_style_preamble}>${ingress}</div>
+     						<div class = blog_title id = 	${'titel' + div_id} 	style = 	"${text_style_title}">	 ${titel}	</div>
+			        		<div class = blog_preamble id = ${'ingress' + div_id} 	style = 	"${text_style_preamble}">${ingress}	</div>
       					</div>
 			        </div>`
 
