--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 	</script>
 	
     	<div id ='blogg_inlägg' class = blog_area>
-		<div id = 'main1' class = blog_cont><script>draw_article_button('main1','rostiga-roadtrips',true)</script></div>
-		<div id = 'main2' class = blog_cont><script>draw_article_button('main2','hawaiiskjortan',false)</script></div>
-		<div id = 'main3' class = blog_cont><script>draw_article_button('main3','rostiga-roadtrips',true)</script></div>   
+		<div id = 'main1' class = blog_cont><script>draw_article_button('main1','rostiga-roadtrips',isMobile)</script></div>
+		<div id = 'main2' class = blog_cont><script>draw_article_button('main2','hawaiiskjortan',isMobile)</script></div>
+		<div id = 'main3' class = blog_cont><script>draw_article_button('main3','rostiga-roadtrips',isMobile)</script></div>   
 	 </div>
  
 
