--- a/header.html
+++ b/header.html
@@ -64,6 +64,10 @@
             </a>
             </div> 
 
+	    <div class = left_div>
+		<a href = "index.html" class = head_cont>HEM</a>
+            </div> 
+		
            <!-- <div class = left_div>
             <a href = "studio-g." class = head_cont>Artiklar</a>
             <a href = "studio-g." class = head_cont>Kultur</a>
