--- a/header.html
+++ b/header.html
@@ -65,7 +65,7 @@
             </div> 
 
 	    <div class = left_div>
-		<a href = "index.html" class = head_cont>HEM</a>
+		<a href = "index.html" class = head_cont>GAFFEL MAGASIN</a>
             </div> 
 		
             <div class = right_div>
