--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 			background: #01010100;
 			width: clamp(50px,90vw,1000px);
 			margin: auto;
-			margin-top: 2vw;
+			margin-top: 15px;
 		}
 		.blog_cont{
 			margin-bottom: 10px;
 			background: #000000ff;
 		}
 		.blog_row {
-			margin: 1%;
+			margin: 3%;
 			float: left;
 			background: #00000000;
 			width: 40%;
