--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Gaffel- Sveriges farligaste popkulturmagasin. Gaffel ger dig allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
 	<title>GAFFEL</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	
