--- a/index.html
+++ b/index.html
@@ -36,37 +36,7 @@
 			margin: auto;
 			margin-top: 15px;
 		}
-		.blog_cont{
-			margin-bottom: 10px;
-			background: #000000ff;
-		}
-		.blog_row {
-			margin: 3%;
-			float: left;
-			background: #00000000;
-			width: 40%;
-		}
-		.blog_img{
-			float: right;
-			width: 55%;
-			background: #505050ff;
-		}
-		.blog_cont::after{
-		    content: "";
-		    display: table;
-		    clear: both;
-		}
-		.blog_title {
-		  padding-top: 1%;
-		  font-family: morfeta;
-		  font-size: clamp(10px,4vw,38px);
-		  line-height: 83%;
-		  color: #FFFFFFFF;
-		}
-		.blog_preamble{
-			font-size: clamp(5px,3vw,18px);
-			color: #FFFFFFFF;
-		}
+		
 
 
 		.banner{
@@ -125,7 +95,39 @@
 			</script>
 		</div>
 	</div>
-	
+	<style>
+		.blog_cont{
+			margin-bottom: 10px;
+			background: #000000ff;
+		}
+		.blog_row {
+			margin: 3%;
+			float: left;
+			background: #00000000;
+			width: 40%;
+		}
+		.blog_img{
+			float: right;
+			width: 55%;
+			background: #505050ff;
+		}
+		.blog_cont::after{
+		    content: "";
+		    display: table;
+		    clear: both;
+		}
+		.blog_title {
+		  padding-top: 1%;
+		  font-family: morfeta;
+		  font-size: clamp(10px,4vw,38px);
+		  line-height: 83%;
+		  color: #FFFFFFFF;
+		}
+		.blog_preamble{
+			font-size: clamp(5px,3vw,18px);
+			color: #FFFFFFFF;
+		}
+	</style>
 	<script>
 		function detectMob() {
 		    const toMatch = [
@@ -143,6 +145,9 @@
 		}
 
 		var isMobile = detectMob();
+	</script>
+	<script>
+		
 		
 		function open_article(str){
 			window.location.href = 'https://gaffelmagasin.github.io/artikel' + '?=' + str;
