--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@
 		}
 	</style>
 	
-	<script>
-		
-	</script>
+	<script src = "scripts_ab.js"></script>
     	<div id ='blogg_inlägg' class = blog_area>
 		<div id = 'main1' class = blog_cont><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
 		<div id = 'main2' class = blog_cont><script>draw_article_button('main2','ledare-1-maj-2024',isMobile)</script></div>
