--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			width: clamp(50px,90vw,1000px);
 			margin: auto;
 			margin-top: 15px;
+			display: inline-grid;
 		}
 
 		.banner{
@@ -65,6 +66,13 @@
 		.gaffel_logga_bild{
 			width: inherit;
 			height: auto;
+		}
+
+		.side_div{
+			margin: 5vw;
+			width: 300px;
+			height: 400px;
+			background: black;
 		}
 		
 	</style>
@@ -127,7 +135,10 @@
 		<div id = 'main5' class = blog_cont><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
 		<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 	 </div>
- 
+	
+ 	<div class = side_div>
+		<p>lite ting</p>
+	</div>
 
 </body>
  
