--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			width: clamp(50px,90vw,1000px);
 			margin: auto;
 			margin-top: 15px;
-			display: inline-grid;
+			display: inline-block;
 		}
 
 		.banner{
