--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 			
 			margin: 0px;
 			padding: 0px;
-			margin: auto;
+
 		}
 
 		.blog_body{
-			display: inline-block;
+			display: block;
+			margin: auto;
 		}
 		
 		.blog_area{
