--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
 		<div id = 'main5' class = blog_cont><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
 		<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 	 </div>
-		
+	<div class = side_div>
+		<p>hej</p>
+	</div>
 
 </body>
  
