--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		}
 
 		.gaffel_logga{
-			margin: auto;
+			margin: 50px;
 			background: #044827FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
