--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		.gaffel_logga{
 			margin: auto;
-			margin-top: 50px;
+			top: 50%;
 			background: #044827FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
