--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			
 			margin: 0px;
 			padding: 0px;
-
+			display: inline-block;
 		}
 
 		
@@ -71,7 +71,6 @@
 			width: 300px;
 			height: 400px;
 			background: black;
-			display: inline;
 		}
 		
 	</style>
