--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 		}
 
 		.side_div{
-			margin: 5vw;
+			float: left;
+			margin: 3vw;
 			width: 300px;
 			height: 400px;
 			background: black;
