--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		.side_div{
 			float: left;
 			margin: 3vw;
-			width: 300px;
+			width: 100px;
 			height: 400px;
 			background: black;
 		}
@@ -171,7 +171,9 @@
 			<div id = 'main5' class = blog_cont><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
-
+		<div class = side_div>
+			<p>Hej</p>
+		</div>
 	</div>
 </body>
  
