--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			margin: auto;
 			margin-top: 15px;
 			width: clamp(50px,90vw,1300px);
-			display: inline;
+			display: block;
 		}
 		
 		.blog_area{
