--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 
 		.side_div{
 			float: left;
-			margin: 3vw;
-			width: 100px;
+			margin-top: 15px;
+			margin-left: 3vw;
+			width: 300px;
 			height: 400px;
 			background: black;
 
