--- a/index.html
+++ b/index.html
@@ -72,12 +72,10 @@
 
 		.side_div{
 			float: left;
-			margin-top: 15px;
 			margin-left: 3vw;
 			width: 300px;
 			height: 400px;
 			background: black;
-
 		}
 		
 	</style>
@@ -175,7 +173,7 @@
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 		<div class = side_div>
-			<p>Hej</p>
+			<div id = 'sid1' class = blog_cont><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
 		</div>
 	</div>
 </body>
