--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 		<div class = side_div>
-			<div id = 'sid1' class = blog_cont><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
+			<div id = 'sid1' class = blog_cont><script>draw_article_button('sid1','ölreportaget',isMobile)</script></div>
 		</div>
 	</div>
 </body>
