--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
 			height: 400px;
 			background: black;
 		}
+		.sid_cont{
+	          font-family: Helvetica-Bold;
+	          color: white;
+	          text-align: center;
+	          padding: 18px 1vw;
+	          text-decoration: none;
+	          font-size: 17px;
+		  width: 100%;
+	        }
+	
+	        .sid_cont:hover {
+	          background-color: white;
+	          color: black;
+	        }
 		
 	</style>
 	<style>
@@ -173,7 +187,7 @@
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 		<div class = side_div>
-			<div id = 'sid1' class = blog_cont><script>draw_article_button('sid1','ölreportaget',isMobile)</script></div>
+			<a href = "index.html" class = sid_cont>GAFFEL MAGASIN</a>
 		</div>
 	</div>
 </body>
