--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 		.sid_cont{
 	          font-family: Helvetica-Bold;
 	          color: white;
-	          text-align: center;
-	          padding: 18px 1vw;
+	          text-align: left;
 	          text-decoration: none;
 	          font-size: 17px;
 		  width: 100%;
+		  height: 20px;
 	        }
 	
 	        .sid_cont:hover {
