--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
 	          text-align: left;
 	          text-decoration: none;
 	          font-size: 28px;
+		  mergin-left: 10px;
 		  width: 100%;
-		  height: 40px;
-		  line-height: 40px;
+		  height: 50px;
+		  line-height: 50px;
 		  display: block;
 	        }
 	
