--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			float: left;
 			margin-left: 3vw;
 			width: 300px;
-			height: 400px;
+			height: 100%;
 			background: black;
 		}
 		.sid_cont{
@@ -83,7 +83,6 @@
 	          text-align: left;
 	          text-decoration: none;
 	          font-size: 28px;
-		  mergin-left: 10px;
 		  width: 100%;
 		  height: 50px;
 		  line-height: 50px;
@@ -190,7 +189,10 @@
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 		<div class = side_div>
-			<a href = "index.html" class = sid_cont>GAFFEL MAGASIN</a>
+			<a href = "index.html" class = sid_cont>  ARTIKLAR</a>
+			<a href = "index.html" class = sid_cont>  KULTUR</a>
+			<a href = "index.html" class = sid_cont>  MODE</a>
+			<a href = "index.html" class = sid_cont>  RECENSIONER</a>
 		</div>
 	</div>
 </body>
