--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 		  height: 50px;
 		  line-height: 50px;
 		  display: block;
+		  text-indent: 15px;
 	        }
 	
 	        .sid_cont:hover {
@@ -189,10 +190,10 @@
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 		<div class = side_div>
-			<a href = "index.html" class = sid_cont>  ARTIKLAR</a>
-			<a href = "index.html" class = sid_cont>  KULTUR</a>
-			<a href = "index.html" class = sid_cont>  MODE</a>
-			<a href = "index.html" class = sid_cont>  RECENSIONER</a>
+			<a href = "index.html" class = sid_cont>ARTIKLAR</a>
+			<a href = "index.html" class = sid_cont>KULTUR</a>
+			<a href = "index.html" class = sid_cont>MODE</a>
+			<a href = "index.html" class = sid_cont>RECENSIONER</a>
 		</div>
 	</div>
 </body>
