--- a/header.html
+++ b/header.html
@@ -45,7 +45,7 @@
           text-align: center;
           padding: 18px 1vw;
           text-decoration: none;
-          font-size: 17px;
+          font-size: 1.1em;
 	  height: 100%;
         }
 
