--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 			margin: auto;
 			position: absolute;
 			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
 			background: #044827FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
