--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 					<a href = "index.html" class = sid_cont>MODE</a>
 					<a href = "index.html" class = sid_cont>RECENSIONER</a>
      					`
-				console.log([is_mobile,window.innerWidth]);
-				if(!is_mobile && window.innerWidth > 1000){
+				console.log([isMobile,window.innerWidth]);
+				if(!isMobile && window.innerWidth > 1200){
 					document.getElementById('artiklar_side').innerHTML = ny_html;
 				}
 			</script>
