--- a/artikel.html
+++ b/artikel.html
@@ -53,6 +53,10 @@
                 margin-left: 5%; 
                 margin-right: 5%; 
             }
+
+	    p{
+		    font-size: 2em;
+	    }
         </style>
     </head>
     <body>
