--- a/index.html
+++ b/index.html
@@ -74,30 +74,7 @@
 			height: auto;
 		}
 
-		.side_div{
-			float: left;
-			margin-left: 3vw;
-			width: 300px;
-			height: 100%;
-			background: black;
-		}
-		.sid_cont{
-	          font-family: Helvetica-Bold;
-	          color: white;
-	          text-align: left;
-	          text-decoration: none;
-	          font-size: 28px;
-		  width: 100%;
-		  height: 50px;
-		  line-height: 50px;
-		  display: block;
-		  text-indent: 15px;
-	        }
-	
-	        .sid_cont:hover {
-	          background-color: white;
-	          color: black;
-	        }
+		
 		
 	</style>
 	<style>
@@ -194,6 +171,33 @@
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 
+		<style>
+			.side_div{
+				float: left;
+				margin-left: 3vw;
+				width: 300px;
+				height: 100%;
+				background: black;
+			}
+			.sid_cont{
+		          font-family: Helvetica-Bold;
+		          color: white;
+		          text-align: left;
+		          text-decoration: none;
+		          font-size: 28px;
+			  width: 100%;
+			  height: 50px;
+			  line-height: 50px;
+			  display: block;
+			  text-indent: 15px;
+		        }
+		
+		        .sid_cont:hover {
+		          background-color: white;
+		          color: black;
+		        }
+		</style>
+		
 		<div id = 'artiklar_side'  class = side_div>
 			<script>
 				var ny_html = `
