--- a/index.html
+++ b/index.html
@@ -171,32 +171,14 @@
 			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 
-		<style>
-			.side_div{
-				float: left;
-				margin-left: 3vw;
-				width: 300px;
-				height: 100%;
-				background: black;
-			}
-			.sid_cont{
-		          font-family: Helvetica-Bold;
-		          color: white;
-		          text-align: left;
-		          text-decoration: none;
-		          font-size: 28px;
-			  width: 100%;
-			  height: 50px;
-			  line-height: 50px;
-			  display: block;
-			  text-indent: 15px;
-		        }
-		
-		        .sid_cont:hover {
-		          background-color: white;
-		          color: black;
-		        }
-		</style>
+		<div id = 'sid_grej'><script> 
+			fetch('sid_info.html')
+				.then(function(resp){return resp.text()})
+				.then(function(resp){
+					document.getElementById('sid_grej').innerHTML = resp;
+				});
+			
+		</script></div>
 		
 		
 
