--- a/sid_info.html
+++ b/sid_info.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+  
+</head>
+<body>
 <style>
   .side_div{
     float: left;
@@ -43,5 +47,5 @@
   </script>
 
 </div>
-
+</body>
 </html>
