--- a/kultur.html
+++ b/kultur.html
@@ -44,7 +44,7 @@
 
 		.banner{
 			  background: black;
-			  background-image: url("bilder/gaffel_bakgrund_tavlor.png");
+			  background-image: url("bilder/kultur_bakgrund.png");
 			  background-repeat: no-repeat;
 			  background-position-x: center;
 			  background-attachment: fixed;
@@ -192,24 +192,6 @@
 		          color: black;
 		        }
 		</style>
-		
-		<div id = 'artiklar_side'  class = side_div>
-		  <script>
-		    var ny_html = `
-		      <a href = "index.html" class = sid_cont>ARTIKLAR</a>
-		      <a href = "index.html" class = sid_cont>KULTUR</a>
-		      <a href = "index.html" class = sid_cont>MODE</a>
-		      <a href = "index.html" class = sid_cont>RECENSIONER</a>
-		          `
-		    console.log([isMobile,window.innerWidth]);
-		    if(!isMobile && window.innerWidth > 1500){
-		      document.getElementById('artiklar_side').innerHTML = ny_html;
-		    }
-		  </script>
-		
-		</div>
-		
-		
 
 	</div>
 </body>
