--- a/index.html
+++ b/index.html
@@ -201,10 +201,9 @@
 		<div id = 'artiklar_side'  class = side_div>
 		  <script>
 		    var ny_html = `
-		      <a href = "index.html" class = sid_cont>ARTIKLAR</a>
-		      <a href = "index.html" class = sid_cont>KULTUR</a>
-		      <a href = "index.html" class = sid_cont>MODE</a>
-		      <a href = "index.html" class = sid_cont>RECENSIONER</a>
+		      <a href = "kulur.html" class = sid_cont>KULTUR</a>
+		      <a href = "mode.html" class = sid_cont>MODE</a>
+		      <a href = "recensioner.html" class = sid_cont>RECENSIONER</a>
 		          `
 		    console.log([isMobile,window.innerWidth]);
 		    if(!isMobile && window.innerWidth > 1500){
